--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -1,10 +1,25 @@
 .box {
     .box1 {
-        display: flex;
-        justify-content: center;
-        background-color: #f9b85e;
+        // height: 600px;
+        width: 600px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
     }
     .box2 {
         background-color: rgb(25, 130, 235);
+    }
+    .text-right{
+        text-align: right !important;
+      }
+      .text-left{
+        text-align: left !important;
+      }
+    .m-r{
+        margin-right: 10px;
+    }
+    .m-l{
+        margin-left: 10px;
     }
 }
